# localsecret

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
src/: main.rs  single_file_server.rs  tests.rs
tests/: cli.rs
