[package]
name = "localsecret"
description = "A cli tool to share a secret file locally via http"
version = "0.2.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/joeka/localsecret"
categories = ["command-line-utilities"]
keywords = ["cli", "secret", "http", "local", "server"]
exclude = ["/.github"]

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.37", features = ["derive"] }
http = "1.3.1"
local-ip-address = "0.6.4"
rand = "0.9.1"
tokio = { version = "1.44.2", features = ["signal"] }
tower-http = { version = "0.6.2", features = ["fs", "set-header"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
reqwest = { version = "0.12.15", features = ["blocking"] }
tempfile = "3.19.1"
wait-timeout = "0.2.1"
